test/corpus/attributes.txt
==================
Root attribute
==================

direction: value

---

(source_file
  (attr_key) (attr_value)
)

==================
Inline shape attribute
==================

foo.shape: oval

---

(source_file
  (identifier) (dot) (attr_key) (attr_value)
)

==================
Inline style attribute
==================

foo.style.opacity: 5

---

(source_file
  (identifier) (dot) (attr_key) (dot) (attr_key) (attr_value)
)
